feat: Create Travel Sample First App. - Added REST endpoints to airports, hotels, and flights --- Was added Schema and Models - Added login and register endpoints to users with schema and models. - Added the authorization with JWT - Updated the API documentation with swagger #262
