# api/hotels/hotels.model.ts
@@ -1,0 +1,48 @@
+import { model, Schema } from '../../lib';
+import { GeolocationSchema } from '../shared/geolocation.model';
+import { LinkType } from '../shared/link.type';
+
+const ReviewSchema = new Schema({
+  author: String,
+  content: String,
+  date: Date,
+  ratings: {
+    Cleanliness: { type: Number, min: 1, max: 5 },
+    Overall: { type: Number, min: 1, max: 5 },
+    Rooms: { type: Number, min: 1, max: 5 },
+    Service: { type: Number, min: 1, max: 5 },
+    Value: { type: Number, min: 1, max: 5 },
+  },
+});
+
+const HotelSchema = new Schema({
+  address: { type: String, required: true },
+  alias: String,
+  checkin: String,
+  checkout: String,
+  city: { type: String, required: true },
+  country: { type: String, required: true },
+  description: String,
+  directions: [String],
+  email: String,
+  fax: String,
+  free_breakfast: Boolean,
+  free_internet: Boolean,
+  free_parking: Boolean,
+  geo: GeolocationSchema,
+  name: { type: String, required: true },
+  pets_ok: Boolean,
+  phone: String,
+  price: Number,
+  public_likes: [String],
+  reviews: [ReviewSchema],
+  state: String,
+  title: String,
+  tollfree: String,
+  url: LinkType,
+  vacancy: Boolean,
+});
+
+HotelSchema.index.findByName = { by: 'name', type: 'n1ql' };
+
+export const HotelModel = model('hotel', HotelSchema);
